plugins {
    id 'java'
    id 'application'
}

wrapper {
    gradleVersion = '6.6.1'
}

mainClassName = 'mqttloader.Loader'
applicationDefaultJvmArgs = ['-Djava.util.logging.config.file=src/dist/logging.properties', '-Dfile.encoding=UTF-8', '--illegal-access=deny', '--add-opens=java.base/java.net=ALL-UNNAMED']

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.eclipse.paho', name: 'org.eclipse.paho.mqttv5.client', version: '1.2.5'
    implementation group: 'org.eclipse.paho', name: 'org.eclipse.paho.client.mqttv3', version: '1.2.5'
    implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
    implementation group: 'commons-net', name: 'commons-net', version: '3.7'
}

compileJava {
    options.release = 8
}

run {
    args '-h'.split('\\s+')
}

CreateStartScripts startScripts = project.startScripts
startScripts.with {
    doLast {
        unixScript.text = unixScript.text.replaceFirst('-Djava.util.logging.config.file=src/dist/logging.properties',
                '-Djava.util.logging.config.file=\\$APP_HOME/logging.properties')
        windowsScript.text = windowsScript.text.replaceFirst('-Djava.util.logging.config.file=src/dist/logging.properties',
                '-Djava.util.logging.config.file=%~dp0../logging.properties')
    }
}
